--- a/StudyCenter_Business/StudyCenter_Business.csproj
+++ b/StudyCenter_Business/StudyCenter_Business.csproj
@@ -4,17 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{82AC2D42-EE57-4929-BB17-4BCBBCE7A242}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
-    <RootNamespace>StudyCenter</RootNamespace>
-    <AssemblyName>StudyCenter</AssemblyName>
+    <ProjectGuid>{FD62AA33-B9A1-48DA-B69B-0A919C828B1F}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>StudyCenter_Business</RootNamespace>
+    <AssemblyName>StudyCenter_Business</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -24,7 +23,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -39,41 +37,28 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Deployment" />
-    <Reference Include="System.Drawing" />
     <Reference Include="System.Net.Http" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="clsClass.cs" />
+    <Compile Include="clsGradeLevel.cs" />
+    <Compile Include="clsGroup.cs" />
+    <Compile Include="clsMeetingTime.cs" />
+    <Compile Include="clsPerson.cs" />
+    <Compile Include="clsStudent.cs" />
+    <Compile Include="clsStudentGroup.cs" />
+    <Compile Include="clsSubject.cs" />
+    <Compile Include="clsSubjectGradeLevel.cs" />
+    <Compile Include="clsSubjectTeacher.cs" />
+    <Compile Include="clsTeacher.cs" />
+    <Compile Include="clsUser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-    <None Include="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
-    <Compile Include="Properties\Settings.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Settings.settings</DependentUpon>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\StudyCenter_Business\StudyCenter_Business.csproj">
-      <Project>{fd62aa33-b9a1-48da-b69b-0a919c828b1f}</Project>
-      <Name>StudyCenter_Business</Name>
+    <ProjectReference Include="..\StudyCenter_DataAccess\StudyCenter_DataAccess.csproj">
+      <Project>{9a20bc14-d144-46ea-bb5b-51a50239cf55}</Project>
+      <Name>StudyCenter_DataAccess</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
