--- a/StudyCenter/App.config
+++ b/StudyCenter/App.config
@@ -1,6 +1,16 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
-    </startup>
+
+	<startup>
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
+	</startup>
+
+	<appSettings>
+		<add key="ProjectName" value="StudyCenter" />
+	</appSettings>
+
+	<connectionStrings>
+		<add name="ConnectionString" connectionString="Server=.;Database=StudyCenter;Integrated Security=True;" providerName="System.Data.SqlClient" />
+	</connectionStrings>
+
 </configuration>
