ADD People Forms

--- a/StudyCenter/App.config
+++ b/StudyCenter/App.config
@@ -7,6 +7,8 @@
 
 	<appSettings>
 		<add key="ProjectName" value="StudyCenter" />
+		<add key="MaxPersonAge" value="100" />
+		<add key="MinPersonAge" value="10" />
 	</appSettings>
 
 	<connectionStrings>
