ADD Students Forms & Other Fixes

--- a/StudyCenter/App.config
+++ b/StudyCenter/App.config
@@ -9,6 +9,7 @@
 		<add key="ProjectName" value="StudyCenter" />
 		<add key="MaxPersonAge" value="100" />
 		<add key="MinPersonAge" value="10" />
+		<add key="RowsPerPage" value="10" />
 	</appSettings>
 
 	<connectionStrings>
