UPD List Students Form to include a button for adding a new student

--- a/StudyCenter/StudyCenter.csproj
+++ b/StudyCenter/StudyCenter.csproj
@@ -325,5 +325,8 @@
   <ItemGroup>
     <None Include="Resources\students-list.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\add-student.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
