--- a/StudyCenter_Business/StudyCenter_Business.csproj
+++ b/StudyCenter_Business/StudyCenter_Business.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="clsClass.cs" />
+    <Compile Include="clsEducationLevel.cs" />
     <Compile Include="clsGradeLevel.cs" />
     <Compile Include="clsGroup.cs" />
     <Compile Include="clsMeetingTime.cs" />
