UPD 'Assign Teacher to Subject' Form & UPD 'List Teachers' Form & UPD 'clsDataAccessHelper' Class

--- a/StudyCenter/StudyCenter.csproj
+++ b/StudyCenter/StudyCenter.csproj
@@ -431,5 +431,8 @@
   <ItemGroup>
     <None Include="Resources\select.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\assign-to-subject-32.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
