ADD 'Show All Teachers who teach a subject' Form

--- a/StudyCenter/StudyCenter.csproj
+++ b/StudyCenter/StudyCenter.csproj
@@ -208,6 +208,12 @@
     <Compile Include="Teachers\frmFindTeacher.Designer.cs">
       <DependentUpon>frmFindTeacher.cs</DependentUpon>
     </Compile>
+    <Compile Include="Teachers\frmGetAllTeachersTeachSubject.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Teachers\frmGetAllTeachersTeachSubject.Designer.cs">
+      <DependentUpon>frmGetAllTeachersTeachSubject.cs</DependentUpon>
+    </Compile>
     <Compile Include="Teachers\frmListTeachers.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -219,6 +225,12 @@
     </Compile>
     <Compile Include="Teachers\frmShowTeacherInfo.Designer.cs">
       <DependentUpon>frmShowTeacherInfo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Teachers\UserControls\ucGetAllTeachersTeachSubject.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Teachers\UserControls\ucGetAllTeachersTeachSubject.Designer.cs">
+      <DependentUpon>ucGetAllTeachersTeachSubject.cs</DependentUpon>
     </Compile>
     <Compile Include="Teachers\UserControls\ucTeacherCard.cs">
       <SubType>UserControl</SubType>
@@ -314,11 +326,17 @@
     <EmbeddedResource Include="Teachers\frmFindTeacher.resx">
       <DependentUpon>frmFindTeacher.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Teachers\frmGetAllTeachersTeachSubject.resx">
+      <DependentUpon>frmGetAllTeachersTeachSubject.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Teachers\frmListTeachers.resx">
       <DependentUpon>frmListTeachers.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Teachers\frmShowTeacherInfo.resx">
       <DependentUpon>frmShowTeacherInfo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Teachers\UserControls\ucGetAllTeachersTeachSubject.resx">
+      <DependentUpon>ucGetAllTeachersTeachSubject.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Teachers\UserControls\ucTeacherCard.resx">
       <DependentUpon>ucTeacherCard.cs</DependentUpon>
