--- a/StudyCenter/StudyCenter.csproj
+++ b/StudyCenter/StudyCenter.csproj
@@ -160,6 +160,12 @@
     <Compile Include="SubjectsAndGradeLevels\frmGetAllSubjectsTaughtByTeacher.Designer.cs">
       <DependentUpon>frmGetAllSubjectsTaughtByTeacher.cs</DependentUpon>
     </Compile>
+    <Compile Include="SubjectsAndGradeLevels\frmListSubjectsGradeLevel.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SubjectsAndGradeLevels\frmListSubjectsGradeLevel.Designer.cs">
+      <DependentUpon>frmListSubjectsGradeLevel.cs</DependentUpon>
+    </Compile>
     <Compile Include="SubjectsAndGradeLevels\frmShowSubjectGradeLevelInfo.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -301,6 +307,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="SubjectsAndGradeLevels\frmGetAllSubjectsTaughtByTeacher.resx">
       <DependentUpon>frmGetAllSubjectsTaughtByTeacher.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SubjectsAndGradeLevels\frmListSubjectsGradeLevel.resx">
+      <DependentUpon>frmListSubjectsGradeLevel.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="SubjectsAndGradeLevels\frmShowSubjectGradeLevelInfo.resx">
       <DependentUpon>frmShowSubjectGradeLevelInfo.cs</DependentUpon>
@@ -508,6 +517,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\subjects-32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\add-subject.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
