--- a/StudyCenter/StudyCenter.csproj
+++ b/StudyCenter/StudyCenter.csproj
@@ -56,6 +56,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\frmShowClassInfo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Classes\frmShowClassInfo.Designer.cs">
+      <DependentUpon>frmShowClassInfo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Classes\UserControls\ucClassCard.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Classes\UserControls\ucClassCard.Designer.cs">
+      <DependentUpon>ucClassCard.cs</DependentUpon>
+    </Compile>
     <Compile Include="GeneralUserControls\ucFilter.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -250,6 +262,12 @@
     <Compile Include="Teachers\UserControls\ucTeacherCardWithFilter.Designer.cs">
       <DependentUpon>ucTeacherCardWithFilter.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Classes\frmShowClassInfo.resx">
+      <DependentUpon>frmShowClassInfo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Classes\UserControls\ucClassCard.resx">
+      <DependentUpon>ucClassCard.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GeneralUserControls\ucFilter.resx">
       <DependentUpon>ucFilter.cs</DependentUpon>
     </EmbeddedResource>
@@ -526,6 +544,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\subjects-blue-64.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\room-type.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\users-list.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
