--- a/StudyCenter/StudyCenter.csproj
+++ b/StudyCenter/StudyCenter.csproj
@@ -62,6 +62,12 @@
     <Compile Include="Classes\frmAddEditClass.Designer.cs">
       <DependentUpon>frmAddEditClass.cs</DependentUpon>
     </Compile>
+    <Compile Include="Classes\frmListClasses.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Classes\frmListClasses.Designer.cs">
+      <DependentUpon>frmListClasses.cs</DependentUpon>
+    </Compile>
     <Compile Include="Classes\frmShowClassInfo.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -270,6 +276,9 @@
     </Compile>
     <EmbeddedResource Include="Classes\frmAddEditClass.resx">
       <DependentUpon>frmAddEditClass.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Classes\frmListClasses.resx">
+      <DependentUpon>frmListClasses.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Classes\frmShowClassInfo.resx">
       <DependentUpon>frmShowClassInfo.cs</DependentUpon>
@@ -559,6 +568,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\users-list.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\classes-list.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\add-class.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
