--- a/StudyCenter/StudyCenter.csproj
+++ b/StudyCenter/StudyCenter.csproj
@@ -62,6 +62,12 @@
     <Compile Include="Classes\frmAddEditClass.Designer.cs">
       <DependentUpon>frmAddEditClass.cs</DependentUpon>
     </Compile>
+    <Compile Include="Classes\frmFindClass.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Classes\frmFindClass.Designer.cs">
+      <DependentUpon>frmFindClass.cs</DependentUpon>
+    </Compile>
     <Compile Include="Classes\frmListClasses.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -79,6 +85,12 @@
     </Compile>
     <Compile Include="Classes\UserControls\ucClassCard.Designer.cs">
       <DependentUpon>ucClassCard.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Classes\UserControls\ucClassCardWithFilter.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Classes\UserControls\ucClassCardWithFilter.Designer.cs">
+      <DependentUpon>ucClassCardWithFilter.cs</DependentUpon>
     </Compile>
     <Compile Include="GeneralUserControls\ucFilter.cs">
       <SubType>UserControl</SubType>
@@ -277,6 +289,9 @@
     <EmbeddedResource Include="Classes\frmAddEditClass.resx">
       <DependentUpon>frmAddEditClass.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Classes\frmFindClass.resx">
+      <DependentUpon>frmFindClass.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Classes\frmListClasses.resx">
       <DependentUpon>frmListClasses.cs</DependentUpon>
     </EmbeddedResource>
@@ -285,6 +300,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Classes\UserControls\ucClassCard.resx">
       <DependentUpon>ucClassCard.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Classes\UserControls\ucClassCardWithFilter.resx">
+      <DependentUpon>ucClassCardWithFilter.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GeneralUserControls\ucFilter.resx">
       <DependentUpon>ucFilter.cs</DependentUpon>
