--- a/StudyCenter/StudyCenter.csproj
+++ b/StudyCenter/StudyCenter.csproj
@@ -110,6 +110,18 @@
     <Compile Include="Groups\frmAddEditGroup.Designer.cs">
       <DependentUpon>frmAddEditGroup.cs</DependentUpon>
     </Compile>
+    <Compile Include="Groups\frmShowGroupInfo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Groups\frmShowGroupInfo.Designer.cs">
+      <DependentUpon>frmShowGroupInfo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Groups\UserControls\ucGroupCard.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Groups\UserControls\ucGroupCard.Designer.cs">
+      <DependentUpon>ucGroupCard.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainMenu\frmMainMenu.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -315,6 +327,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Groups\frmAddEditGroup.resx">
       <DependentUpon>frmAddEditGroup.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Groups\frmShowGroupInfo.resx">
+      <DependentUpon>frmShowGroupInfo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Groups\UserControls\ucGroupCard.resx">
+      <DependentUpon>ucGroupCard.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainMenu\frmMainMenu.resx">
       <DependentUpon>frmMainMenu.cs</DependentUpon>
@@ -607,6 +625,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\end-time.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\confirm-32.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
