--- a/StudyCenter/StudyCenter.csproj
+++ b/StudyCenter/StudyCenter.csproj
@@ -110,6 +110,12 @@
     <Compile Include="Groups\frmAddEditGroup.Designer.cs">
       <DependentUpon>frmAddEditGroup.cs</DependentUpon>
     </Compile>
+    <Compile Include="Groups\frmListGroups.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Groups\frmListGroups.Designer.cs">
+      <DependentUpon>frmListGroups.cs</DependentUpon>
+    </Compile>
     <Compile Include="Groups\frmShowGroupInfo.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -327,6 +333,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Groups\frmAddEditGroup.resx">
       <DependentUpon>frmAddEditGroup.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Groups\frmListGroups.resx">
+      <DependentUpon>frmListGroups.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Groups\frmShowGroupInfo.resx">
       <DependentUpon>frmShowGroupInfo.cs</DependentUpon>
@@ -628,6 +637,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\confirm-32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\manage-groups.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\add-group.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
