--- a/StudyCenter/StudyCenter.csproj
+++ b/StudyCenter/StudyCenter.csproj
@@ -110,6 +110,12 @@
     <Compile Include="Groups\frmAddEditGroup.Designer.cs">
       <DependentUpon>frmAddEditGroup.cs</DependentUpon>
     </Compile>
+    <Compile Include="Groups\frmAddEditAssignStudentToGroup.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Groups\frmAddEditAssignStudentToGroup.Designer.cs">
+      <DependentUpon>frmAddEditAssignStudentToGroup.cs</DependentUpon>
+    </Compile>
     <Compile Include="Groups\frmListGroups.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -333,6 +339,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Groups\frmAddEditGroup.resx">
       <DependentUpon>frmAddEditGroup.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Groups\frmAddEditAssignStudentToGroup.resx">
+      <DependentUpon>frmAddEditAssignStudentToGroup.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Groups\frmListGroups.resx">
       <DependentUpon>frmListGroups.cs</DependentUpon>
